#155 use tomcat 9.0.22 for the Studio